// 登陆请求
message ReqLogin {
	optional string account = 1; // 账号
	optional string password = 2; // 密码
}
// 登陆
message ResLogin {
	optional int32 results = 1; // 结果
	optional int32 uid = 2; // 细节
	optional string salt = 3; // 密文
	optional string details = 4; // 细节
}
//创建账号
message ReqCreateAccount{
	optional string account = 1; // 账号
	optional string password = 2; // 密码
}
//创建角色
message ReqCreateRole{
	optional string uid = 1; // 用户ID
	optional string user_name = 2; // 角色名
}
//获取角色基本信息
message ReqGetRole{
	optional string uid = 1; // 用户ID
}
//获取角色基本信息
message ResGetRole{
	optional string uid = 1; // 用户ID
	optional string user_name = 2; // 角色名
	optional int32 endurance = 3; // 耐力
	optional int32 gold = 4;//金币
	optional int32 wing = 5;//元宝
	optional int32 lv = 6;//等级
	optional int32 vip = 7;//vip等级
	optional int32 head = 8;//头像
}
